--- a/css/main.css
+++ b/css/main.css
@@ -1,52 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
-
 body {
-  font-family: 'Comfortaa', cursive;
-  background-color: salmon;
-  color: #0008;
+    font-family: 'Comfortaa', cursive;
+    background-color: rgb(226, 252, 218);
+    color: #0008;
 }
 
 #app {
-  margin: 50px auto;
-  max-width: 700px;
+    margin: 50px auto;
+    max-width: 700px;
 }
 
 .comments-container {
-  background: #fff9;
-  border-radius: 1rem;
-  padding: 30px;
+    background: #fff9;
+    border-radius: 1rem;
+    padding: 30px;
 }
 
-.comments-container > ul {
-  padding: 0;
+.comments-container>ul {
+    padding: 0;
 }
 
 ul {
-  list-style: none;
-  margin: 0;
-  padding: 0 0 0 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0 0 0 20px;
 }
 
 li {
-  border-radius: 1rem;
-  padding: 10px;
-  border: 1px solid #0002;
-  margin-bottom: 15px;
+    border-radius: 1rem;
+    padding: 10px;
+    border: 1px solid #0002;
+    margin-bottom: 15px;
 }
 
 li li {
-  background: #fff5;
+    background: #fff5;
 }
 
 h4 {
-  text-align: center;
-  font-weight: bolder;
-  margin: 30px 0;
+    text-align: center;
+    font-weight: bolder;
+    margin: 30px 0;
 }
 
 @media (min-width: 768px) {
-  /* .container {
+    /* .container {
     position: absolute;
     margin: auto !important;
     left: 50%;
